# UnL

./: .gitignore  ANALISE_INCONSISTENCIAS.txt  AVALIACAO_ROBUSTEZ_TESTES.txt  README.md  analise dos resultados.txt  pyproject.toml  requirements.txt  screen_hardcopy.txt
data/: plot_digits_samples.py  visualize_femnist.py
docs/: CHANGES_FROM_E97D0CE.md
experiments/qfl_training/configs/: default.yaml
experiments/qfl_training/scripts/: monitor_training.sh  run_training.py
experiments/qfl_unlearning_qfi/configs/: default.yaml
experiments/qfl_unlearning_qfi/scripts/: plot_partial_results.py  run_unlearning.py
paper/: README.md  main.tex  references.bib
paper/sections/: background.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  methodology.tex  results_expected.tex
scripts/: plot_ablation.py  publish_branch.sh  train_simple_nn.py
src/qfl/common/: __init__.py  contracts.py  types.py
src/qfl/data/: __init__.py  femnist.py
src/qfl/experiments/: __init__.py  pipeline.py
src/qfl/federated/: __init__.py  client.py  hybrid_unlearning.py  metrics.py  mia.py  server.py  strategy.py  unlearning.py
src/qfl/quantum/: __init__.py  device.py  model.py
src/qfl/utils/: __init__.py  checkpoint.py  io.py  logging.py  progress.py  seed.py
tests/: test_experiments_pipeline.py  test_federated.py  test_hybrid_unlearning.py  test_qfi.py
validacao/: README.md  light_training_summary.json  results.json  run_smoke_validation.py  synthetic_validation.npz  synthetic_validation_light.npz
validacao/light_training/logs/: training_runs.csv  (+1 more)
(+35 files in other folders)
