[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qfederatedulearning"
version = "0.1.0"
description = "Quantum Federated Learning with FEMNIST and QFI-based unlearning"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "pennylane>=0.37",
  "pennylane-lightning>=0.37",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

